--- a/PolygonManipulator/Form1.resx
+++ b/PolygonManipulator/Form1.resx
@@ -71,14 +71,14 @@
     <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Canvas.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 11</value>
+    <value>0, 0</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Canvas.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 2, 3, 2</value>
   </data>
   <data name="Canvas.Size" type="System.Drawing.Size, System.Drawing">
-    <value>842, 474</value>
+    <value>1099, 703</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Canvas.TabIndex" type="System.Int32, mscorlib">
@@ -94,16 +94,16 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;Canvas.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
   </data>
   <data name="AddNewPolygonToCanvasButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>919, 49</value>
+    <value>1119, 53</value>
   </data>
   <data name="AddNewPolygonToCanvasButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>3, 2, 3, 2</value>
   </data>
   <data name="AddNewPolygonToCanvasButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>116, 22</value>
+    <value>162, 28</value>
   </data>
   <data name="AddNewPolygonToCanvasButton.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -121,13 +121,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;AddNewPolygonToCanvasButton.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>6</value>
   </data>
   <data name="ClearCanvasButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>942, 11</value>
+    <value>1119, 12</value>
   </data>
   <data name="ClearCanvasButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>93, 23</value>
+    <value>162, 27</value>
   </data>
   <data name="ClearCanvasButton.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -145,94 +145,17 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ClearCanvasButton.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="MovePointsRadioButton.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="MovePointsRadioButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 47</value>
-  </data>
-  <data name="MovePointsRadioButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>91, 19</value>
-  </data>
-  <data name="MovePointsRadioButton.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="MovePointsRadioButton.Text" xml:space="preserve">
-    <value>Move points</value>
-  </data>
-  <data name="&gt;&gt;MovePointsRadioButton.Name" xml:space="preserve">
-    <value>MovePointsRadioButton</value>
-  </data>
-  <data name="&gt;&gt;MovePointsRadioButton.Type" xml:space="preserve">
-    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;MovePointsRadioButton.Parent" xml:space="preserve">
-    <value>groupBox1</value>
-  </data>
-  <data name="&gt;&gt;MovePointsRadioButton.ZOrder" xml:space="preserve">
-    <value>0</value>
-  </data>
-  <data name="AddPointsRadioButton.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="AddPointsRadioButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>6, 22</value>
-  </data>
-  <data name="AddPointsRadioButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 19</value>
-  </data>
-  <data name="AddPointsRadioButton.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="AddPointsRadioButton.Text" xml:space="preserve">
-    <value>Add points</value>
-  </data>
-  <data name="&gt;&gt;AddPointsRadioButton.Name" xml:space="preserve">
-    <value>AddPointsRadioButton</value>
-  </data>
-  <data name="&gt;&gt;AddPointsRadioButton.Type" xml:space="preserve">
-    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;AddPointsRadioButton.Parent" xml:space="preserve">
-    <value>groupBox1</value>
-  </data>
-  <data name="&gt;&gt;AddPointsRadioButton.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="groupBox1.Enabled" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>919, 100</value>
-  </data>
-  <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>141, 100</value>
-  </data>
-  <data name="groupBox1.TabIndex" type="System.Int32, mscorlib">
-    <value>4</value>
-  </data>
-  <data name="groupBox1.Text" xml:space="preserve">
-    <value>groupBox1</value>
-  </data>
-  <data name="&gt;&gt;groupBox1.Name" xml:space="preserve">
-    <value>groupBox1</value>
-  </data>
-  <data name="&gt;&gt;groupBox1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;groupBox1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;groupBox1.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>7</value>
   </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="label1.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>970, 343</value>
+    <value>1145, 385</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>38, 15</value>
@@ -253,13 +176,91 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
+    <value>4</value>
+  </data>
+  <data name="checkBox1.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="checkBox1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1119, 95</value>
+  </data>
+  <data name="checkBox1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>162, 19</value>
+  </data>
+  <data name="checkBox1.TabIndex" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="checkBox1.Text" xml:space="preserve">
+    <value>Use Bresenham algorithm</value>
+  </data>
+  <data name="checkBox1.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleCenter</value>
+  </data>
+  <data name="&gt;&gt;checkBox1.Name" xml:space="preserve">
+    <value>checkBox1</value>
+  </data>
+  <data name="&gt;&gt;checkBox1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;checkBox1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;checkBox1.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="Scene1Button.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1119, 149</value>
+  </data>
+  <data name="Scene1Button.Size" type="System.Drawing.Size, System.Drawing">
+    <value>162, 28</value>
+  </data>
+  <data name="Scene1Button.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
+  </data>
+  <data name="Scene1Button.Text" xml:space="preserve">
+    <value>Scene 1</value>
+  </data>
+  <data name="&gt;&gt;Scene1Button.Name" xml:space="preserve">
+    <value>Scene1Button</value>
+  </data>
+  <data name="&gt;&gt;Scene1Button.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;Scene1Button.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;Scene1Button.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="Scene2Button.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1119, 194</value>
+  </data>
+  <data name="Scene2Button.Size" type="System.Drawing.Size, System.Drawing">
+    <value>162, 28</value>
+  </data>
+  <data name="Scene2Button.TabIndex" type="System.Int32, mscorlib">
+    <value>8</value>
+  </data>
+  <data name="Scene2Button.Text" xml:space="preserve">
+    <value>Scene 2</value>
+  </data>
+  <data name="&gt;&gt;Scene2Button.Name" xml:space="preserve">
+    <value>Scene2Button</value>
+  </data>
+  <data name="&gt;&gt;Scene2Button.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;Scene2Button.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;Scene2Button.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>1072, 496</value>
+    <value>1321, 696</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>Form1</value>
